--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_height="49dp"
         android:layout_marginTop="8dp"
 
-        android:onClick="SendT"
+        android:onClick="onClickSend"
         android:text="send T"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
