--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,47 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button2"
+    <ImageButton
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-
-        android:layout_marginTop="68dp"
-        android:onClick="SendF"
-        android:text="send F"
+        android:layout_height="331dp"
+        android:layout_marginTop="72dp"
+        android:src="@drawable/button_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/textView"
-
-        />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:layout_marginTop="8dp"
-
-        android:onClick="SendT"
-        android:text="send T"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="344dp"
         android:onClick="onClickStart"
-        android:text="Connect"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        />
 
 </android.support.constraint.ConstraintLayout>
