--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="132dp"
         android:layout_marginTop="64dp"
         android:text="SEND T"
+        android:onClick="SENDT"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +24,7 @@
         android:layout_marginStart="132dp"
         android:layout_marginTop="76dp"
         android:text="SEND F"
+        android:onClick="SENDF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
 </android.support.constraint.ConstraintLayout>
