--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -27,4 +27,15 @@
         android:onClick="SENDF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="100dp"
+        android:text="textView"
+        android:onClick="click"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
 </android.support.constraint.ConstraintLayout>
