--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,64 +8,100 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="HEATING"
         app:layout_constraintBottom_toTopOf="@+id/button7"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="ADD"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="204dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="PARKING"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="AUDIO"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="SAFETY"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="LED"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:onClick="StartLED"
+        android:text="LED"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:layout_width="330dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_button"
         android:text="LIGHTS"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+
 </android.support.constraint.ConstraintLayout>
