opkuis namen + lights goed gezet

--- a/app/src/main/res/layout/activity_lights.xml
+++ b/app/src/main/res/layout/activity_lights.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main3Activity">
-
+    tools:context=".Lights">
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
         android:layout_marginTop="64dp"
-        android:text="SEND T"
-        android:onClick="SENDT"
+        android:text="Light 1"
+        android:onClick="SEND1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,19 +22,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
         android:layout_marginTop="76dp"
-        android:text="SEND F"
-        android:onClick="SENDF"
+        android:text="Light 2"
+        android:onClick="SEND2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="100dp"
-        android:text="textView"
-        android:onClick="click"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+
+
 </android.support.constraint.ConstraintLayout>
