--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,12 +8,15 @@
 
     <Button
         android:id="@+id/button5"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
+        android:background="@drawable/ic_button"
+        android:drawableLeft="@drawable/ic_toys_24px"
+        android:paddingLeft="20dp"
+        android:text="HEATING"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
-        android:background="@drawable/ic_button"
-        android:text="HEATING"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,12 +24,12 @@
 
     <Button
         android:id="@+id/button7"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:text="PARKING"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -35,12 +38,12 @@
 
     <Button
         android:id="@+id/button3"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:text="AUDIO"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -49,12 +52,12 @@
 
     <Button
         android:id="@+id/button4"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:text="SAFETY"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,13 +65,13 @@
 
     <Button
         android:id="@+id/button2"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:onClick="StartLED"
         android:text="LED"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -77,12 +80,12 @@
 
     <Button
         android:id="@+id/button"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:text="LIGHTS"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -91,8 +94,8 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="330dp"
-        android:layout_height="60dp"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:text="ADD"
         android:textColor="#FFFFFF"
