--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,10 +13,11 @@
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_toys_24px"
         android:paddingLeft="20dp"
-        android:text="HEATING"
-        android:textAlignment="center"
+        android:text="\t\t\t\t\tHEATING"
+        android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +28,12 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:text="PARKING"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\PARKING"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -41,9 +45,13 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:text="AUDIO"
+        android:drawableLeft="@drawable/ic_volume_up_24px"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\AUDIO"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -55,9 +63,13 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:text="SAFETY"
+        android:drawableLeft="@drawable/ic_verified_user_24px"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\SAFETY"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,10 +80,14 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
+        android:drawableLeft="@drawable/ic_brightness_medium_24px"
         android:onClick="StartLED"
-        android:text="LED"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\LED"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -83,9 +99,13 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:text="LIGHTS"
+        android:drawableLeft="@drawable/ic_flare_24px"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\LIGHTS"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -97,9 +117,13 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:text="ADD"
+        android:drawableLeft="@drawable/ic_add_circle_24px"
+        android:paddingLeft="20dp"
+        android:textAlignment="viewStart"
+        android:text="\t\t\t\t\ADD"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
