Revert "layout menus"
This reverts commit 62e10d5bfec688cd865e8e689c145a6b55e21318.

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,11 +13,10 @@
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_toys_24px"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\tHEATING"
-        android:textAlignment="viewStart"
+        android:text="HEATING"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,12 +27,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\PARKING"
+        android:text="PARKING"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,13 +41,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_volume_up_24px"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\AUDIO"
+        android:text="AUDIO"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -63,13 +55,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_verified_user_24px"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\SAFETY"
+        android:text="SAFETY"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,14 +68,10 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_brightness_medium_24px"
         android:onClick="StartLED"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\LED"
+        android:text="LED"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -99,13 +83,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_flare_24px"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\LIGHTS"
+        android:text="LIGHTS"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -117,13 +97,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_add_circle_24px"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\ADD"
+        android:text="ADD"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
