ik moest comiiten van emyl

--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -28,9 +28,9 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:paddingLeft="20dp"
+        android:paddingLeft="56dp"
         android:textAlignment="viewStart"
-        android:text="\t\t\t\t\PARKING"
+        android:text="P\t\t\t\PARKING"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:textStyle="bold"
