--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -70,6 +70,7 @@
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:onClick="StartSafety"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
