--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -1,10 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MenuScreen">
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_button"
+        android:drawableLeft="@drawable/ic_brightness_medium_24px"
+        android:onClick="StartLED"
+        android:paddingLeft="20dp"
+        android:text="\t\t\t\t\LED"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
+        android:background="@drawable/ic_button"
+        android:drawableLeft="@drawable/ic_volume_up_24px"
+        android:paddingLeft="20dp"
+        android:text="\t\t\t\t\AUDIO"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="348dp"
+        android:layout_height="77dp"
+        android:background="@drawable/ic_button"
+        android:drawableLeft="@drawable/ic_flare_24px"
+        android:onClick="StartLights"
+        android:paddingLeft="20dp"
+        android:text="\t\t\t\t\LIGHTS"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/button5"
@@ -21,7 +80,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button7"
@@ -29,26 +88,8 @@
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:paddingLeft="56dp"
-        android:textAlignment="viewStart"
         android:text="P\t\t\t\PARKING"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="348dp"
-        android:layout_height="77dp"
-        android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_volume_up_24px"
-        android:paddingLeft="20dp"
         android:textAlignment="viewStart"
-        android:text="\t\t\t\t\AUDIO"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -56,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <Button
         android:id="@+id/button4"
@@ -64,55 +105,17 @@
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_verified_user_24px"
+        android:onClick="StartSafety"
         android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
         android:text="\t\t\t\t\SAFETY"
+        android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:onClick="StartSafety"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="348dp"
-        android:layout_height="77dp"
-        android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_brightness_medium_24px"
-        android:onClick="StartLED"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\LED"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="348dp"
-        android:layout_height="77dp"
-        android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_flare_24px"
-        android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
-        android:text="\t\t\t\t\LIGHTS"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:onClick="StartLights"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
 
     <Button
         android:id="@+id/button6"
@@ -121,15 +124,15 @@
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_add_circle_24px"
         android:paddingLeft="20dp"
-        android:textAlignment="viewStart"
         android:text="\t\t\t\t\ADD"
+        android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
-
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
