--- a/app/src/main/res/layout/activity_mainscreen.xml
+++ b/app/src/main/res/layout/activity_mainscreen.xml
@@ -12,7 +12,7 @@
         android:layout_height="545dp"
         android:background="#FFFFFF"
         android:onClick="onClickStart"
-        android:src="@drawable/connect_not_pressed"
+        android:src="@drawable/button_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
