--- a/app/src/main/res/layout/activity_leds.xml
+++ b/app/src/main/res/layout/activity_leds.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Leds">
 
-
     <TextView
         android:id="@+id/textView_G"
         android:layout_width="wrap_content"
@@ -16,6 +15,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="0"
+        android:textColor="#0000FF"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/seekBar_G"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,13 +25,15 @@
 
     <TextView
         android:id="@+id/textView_B"
-        android:layout_width="61dp"
-        android:layout_height="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="0"
+        android:textColor="#00FF00"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/seekBar_B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +79,9 @@
 
     <SeekBar
         android:id="@+id/seekBar_R"
+        android:thumbTint="#FF0000"
+        android:progressTint="#FF0000"
+        android:progressBackgroundTint="#FF0000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -83,14 +90,15 @@
         android:max="255"
         android:min="0"
         android:progress="50"
-        android:progressDrawable="@drawable/ic_redrect"
-        android:thumb="@drawable/ic_redball"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar_G"
+        android:thumbTint="#0000FF"
+        android:progressTint="#0000FF"
+        android:progressBackgroundTint="#0000FF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -105,6 +113,9 @@
 
     <SeekBar
         android:id="@+id/seekBar_B"
+        android:thumbTint="#00FF00"
+        android:progressTint="#00FF00"
+        android:progressBackgroundTint="#00FF00"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -126,6 +137,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="0"
+        android:textColor="#FF0000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/seekBar_R"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
