--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -22,7 +22,7 @@
         android:text="\t\t\t\t\LED"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:text="\t\t\t\t\AUDIO"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:text="\t\t\t\t\LIGHTS"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,12 +70,12 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
-        android:drawableLeft="@drawable/ic_toys_24px"
+        android:drawableStart="@drawable/ic_toys_24px"
         android:paddingLeft="20dp"
         android:text="\t\t\t\t\tHEATING"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,12 +87,12 @@
         android:layout_width="348dp"
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
+        android:onClick="StartSafety"
         android:paddingLeft="56dp"
         android:text="P\t\t\t\PARKING"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:onClick="StartSafety"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
         android:text="\t\t\t\t\SAFETY"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:text="\t\t\t\t\ADD"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
