fixed parking button

--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -88,8 +88,8 @@
         android:layout_height="77dp"
         android:background="@drawable/ic_button"
         android:onClick="StartSafety"
-        android:paddingLeft="56dp"
-        android:text="P\t\t\t\PARKING"
+        android:paddingLeft="25dp"
+        android:text="P\t\t\t\t\t\t\PARKING"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
