--- a/app/src/main/res/layout/activity_lights.xml
+++ b/app/src/main/res/layout/activity_lights.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="112dp"
         android:background="@drawable/lights_disabled"
         android:onClick="SEND1"
-        android:text="GROOTLICHT"
+        android:text="@string/grootlicht"
         android:textColor="#CBCBCB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
         android:layout_marginBottom="112dp"
         android:background="@drawable/lights_disabled"
         android:onClick="SEND2"
-        android:text="DIMLICHT"
+        android:text="@string/dimlicht"
         android:textColor="#CBCBCB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
