--- a/app/src/main/res/layout/activity_menuscreen.xml
+++ b/app/src/main/res/layout/activity_menuscreen.xml
@@ -19,7 +19,7 @@
         android:drawableLeft="@drawable/ic_brightness_medium_24px"
         android:onClick="StartLED"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\LED"
+        android:text="@string/led"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -36,7 +36,7 @@
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_volume_up_24px"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\AUDIO"
+        android:text="@string/audiomenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -55,7 +55,7 @@
         android:drawableLeft="@drawable/ic_flare_24px"
         android:onClick="StartLights"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\LIGHTS"
+        android:text="@string/lightsmenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -72,7 +72,7 @@
         android:background="@drawable/ic_button"
         android:drawableStart="@drawable/ic_toys_24px"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\tHEATING"
+        android:text="@string/heatingmenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -89,7 +89,7 @@
         android:background="@drawable/ic_button"
         android:onClick="StartSafety"
         android:paddingLeft="25dp"
-        android:text="P\t\t\t\t\t\t\PARKING"
+        android:text="@string/parkingmenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -108,7 +108,7 @@
         android:drawableLeft="@drawable/ic_verified_user_24px"
 
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\SAFETY"
+        android:text="@string/safetymenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -125,7 +125,7 @@
         android:background="@drawable/ic_button"
         android:drawableLeft="@drawable/ic_add_circle_24px"
         android:paddingLeft="20dp"
-        android:text="\t\t\t\t\ADD"
+        android:text="@string/addmenu"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
